--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -1,5 +1,5 @@
 home.title: 'Eres tú el artista de tu  imagen.'
-home.underTitle: 'Fabienne Chmara Coach y creadora de bienestar a través de la imagen'
+home.underTitle: 'Fabienne Chmara<br>Coach y creadora de bienestar a través de la imagen'
 home.video: __home.video
 home.presentaion.head.title: '¿Cómo puedo apoyarte en la realización de tus sueños?'
 home.presentation.head.text: '¿Quieres tener un <strong>estilo auténtico</strong> que te represente al 100%, con el que te sientas cómodo en cualquier circunstancia, pero no sabes por dónde empezar?'
@@ -12,9 +12,9 @@ navbar.language: Español
 navbar.coachingOfImage: 'Coaching de imagen'
 navbar.workshop: Talleres
 navbar.contact: Contacto
-contact.contactMe: 'Contáctame :'
+contact.contactMe: 'Contáctame'
 contact.service.form.type: 'Mi solicitud se refiere a :'
-contact.service.form.client: 'Yo soy :'
+contact.service.form.client: 'soy :'
 contact.form.firstName: Nombre
 contact.form.lastName: Apellidos
 contact.form.Email: 'Correo electrónico'
@@ -33,15 +33,15 @@ home.commentary.text.1: 'Llevaba mucho tiempo queriendo hacer esto. El servicio 
 home.commentary.author.1: 'Marge, 36 años'
 coachingImage.h1: 'Coaching de imagen'
 coachingImage.h1.p1: 'Para mí vestir es un verdadero arte de vivir.<br>Créé Fabimage para compartir ese espiritu contigo.'
-coachingImage.h1.p2: '¡Pon tu estilo en valor para reflejar tu verdadero yo!'
+coachingImage.h1.p2: '¡Pon tu estilo a brillar para reflejar tu verdadero yo!'
 coachingImage.rightColumn.h2: '¿Cómo funciona el coaching de imagen?'
 coachingImage.rightColumn.p.1: 'Estoy convencida de que cada persona tiene un <strong>tesoro de bondad</strong> en su interior: un <strong>potencial</strong> capaz de conducirle hacia lo que mejor puede colmarle y hacerle feliz.<br>Fabimage ha nacido para ayudarte a encontrar ese potencial interior y ponerlo al servicio de tus objetivos.<br><br>Este descubrimiento se realiza a través de un proceso de coaching basado en <strong>las tres dimensiones de la imagen:</strong> imagen interna, cuerpo y apariencia.<br><br>El coaching de imagen - <a href="https://www.domingodelgado.com">método Domingo Delgado©</a> que te propongo es un <strong>método de autoconocimiento</strong> donde se trabaja con <strong>la persona</strong> (su identidad, su interioridad, su cuerpo) y <strong>la representación de la persona</strong> (su aspecto físico y visual).<br>Conectamos todas estas dimensiones para aprender a:<br><strong>-Aceptarte</strong> a tí mismo física e internamente<br><strong>-Cuidarte</strong> bien física e internamente<br><strong>-Amarte</strong> a tí mismo tal y como eres'
 coachingImage.leftColumn.p.1: '<strong>¿A QUIÉN VA DIRIGIDO EL COACHING DE IMAGEN?</strong><br><u>El coaching de imagen es para ti si:</u><br><br>-quieres <strong>conocerte mejor</strong> a ti mismo<br>-te gustaría <strong>aceptar y amar</strong> todo lo que conoces de ti: tanto <strong>tus sombras</strong> como <strong>tus luces</strong><br>-está dispuesto a <strong>invertir unas semanas</strong> en un trabajo sobre ti mismo y también sobre tu vestuario (si es necesario).<br>-te sientes llamado a ir más allá en la <strong>percepción estética</strong> de tu imagen<br>-buscas desarrollar un <strong>estilo auténtico,</strong> 100% acorde con lo que eres.<br><br><u>El coaching de imagen <strong>no</strong> es para ti si:</u><br><br>-quieres resultados rápidos<br>-buscas consejos / asesoramiento de estilo<br>-piensas que ya te conoces lo suficiente y/o no estas dispuesto a examinarte a ti mismo<br>-la dimensión corporal de tu imagen te da igual.'
 coachingImage.button.requestQuote: Servicios
 fabienne.title.p: 'Coach de imagen<br><br>Creadora de bienestar a través de la imagen'
-fabienne.leftColumn.p.1: 'Siempre he pensado que la imagen es la clave de la comunicación. Después de trabajar en diferentes sectores, me di cuenta de que me encantaba ayudar a las personas a sentirse más seguras y radiantes. En 2019 lancé FABIMAGE con el objetivo de ayudarte <strong>a sentirte lo mejor posible</strong>.<br><br>Mi papel es proporcionarte herramientas experimentadas para ayudarte a construir un <strong>estilo personal coherente con quién eres</strong> y un vestuario que <strong>cuente la historia de tu belleza interior.</strong><br><br>Soy francesa y vivo en Estonia desde hace muchos años.<br><br>¿Qué imagen tengo de mí misma? <br><br>Aunque a veces fluctuante, es colorida, sólida, sensible y profunda.<br><br>Soy reflexiva, idealista, un poco tímida pero apasionada por las relaciones humanas y, sobre todo, muy joven de corazón 😊 Me gusta mucho salir con amigos. Tengo un oído atento que escucha a las personas que quieren confiar en mí. Me gusta pensar y llegar al fondo de las cosas. La gente dice que tengo un corazón grande.<br><br>Puedo maquillarme o no, pero rara vez voy sin pintarme los labios. Soy de estatura media, ojos color avellana, piel bastante clara y pelo castaño liso. A pesar de mis incursiones en otros estilos, el bob asimétrico vuelve a mí como el estribillo de una canción favorita.<br><br>Me gusta reír, tengo un sentido del humor que no siempre se entiende 😊 Lloro si me emociona mucho una historia, puede ser viendo una película. O me pongo de buen humor con Jean Jacques Goldman, El Arrebato, Zaz, Curly Strings y muchos otros. Me encanta hablar y contar historias. Si tengo confianza, ¡puedo no parar!<br><br>La confianza es uno de los temas que trabajé durante mi formación en coaching de imagen, durante la cual pasé por un proceso de <strong>transformación total in & out</strong> que me llevó hasta donde estoy hoy. Así que yo misma pasé por este maravilloso viaje que hoy te ofrezco. Y te lo garantizo: <strong>si te gusta la idea de trabajar toda tu imagen, ¡merece mucho la pena!</strong> ¡Hoy disfruto de un estilo más auténtico y libre!<br><br>¡Descubre lo que puedo hacer por tu bienestar y tu estilo!'
+fabienne.leftColumn.p.1: 'Siempre he pensado que la imagen es la clave de la comunicación. Después de trabajar en diferentes sectores, me di cuenta de que me encantaba ayudar a las personas a sentirse más seguras y radiantes. En 2019 lancé FABIMAGE con el objetivo de ayudarte a que <strong>te sientas lo mejor posible.</strong><br><br>Mi papel es proporcionarte <strong>herramientas experimentadas</strong> para ayudarte a construir un estilo personal coherente con quién eres y un vestuario que cuente la historia de tu belleza interior.<br><br>Soy francesa y vivo en Estonia desde hace muchos años.<br><br>¿Qué imagen tengo de mí misma?<br><br>Aunque a veces fluctuante, es colorida, sólida, sensible y profunda.<br><br>Soy reflexiva, idealista, un poco tímida pero apasionada por las relaciones humanas y, sobre todo, muy joven de corazón 😊 Me gusta mucho salir con amigos. Tengo un oído atento que escucha a las personas que quieren confiar en mí. Me gusta pensar y llegar al fondo de las cosas. La gente dice que tengo un corazón grande.<br><br>Siempre me ha interesado la moda, <strong>mi madre</strong> solía coser toda nuestra ropa. Nos enseñaba fotos y teníamos que elegir patrones y telas. Sin embargo, la vida me llevó a estudiar economía y, después de mi máster, me dediqué a la hostelería. También trabaje unos años en la Embajada de Francia en Tallin.<br><br>Pasé por un proceso de coaching de imagen completamente <strong>transformador in & out</strong> y eso me llevó a donde estoy ahora. Así que yo misma pasé por este maravilloso proceso que hoy te ofrezco. <strong>Si te gusta la idea de trabajar tu imagen integral,</strong> te garantizo: <strong>¡realmente vale la pena!</strong> ¡Hoy disfruto de un estilo auténtico y libre!<br><br>¡Descubre lo que puedo hacer por tu bienestar y tu estilo!'
 fabienne.Idiscover: '¡ Descubro !'
-fabienne.AFIPP: 'AFIPP - <a href="https://www.afipp.org/">Association Francophone pour l''Image et la Posture Professionnelle</a> (Asociación Francófona para la Imagen y la Postura Profesional).<br><br>Soy miembro del AFIPP desde marzo de 2020.<br>Somos profesionales de la imagen, asesores, consultores, formadores y coaches, mujeres y hombres, con un deseo comun: crear un circulo convivial entre pares, que permita a cada uno intercambiar, mantener una dinamica, promover un desarollo calitativo para mantener un alto nivel profesional.'
+fabienne.AFIPP: 'AFIPP - <a href="https://www.afipp.org/" target=\"_blank\">Association Francophone pour l''Image et la Posture Professionnelle</a> (Asociación Francófona para la Imagen y la Postura Profesional).<br><br>Soy miembro del AFIPP desde marzo de 2020.<br>Somos profesionales de la imagen, asesores, consultores, formadores y coaches, mujeres y hombres, con un deseo comun: crear un circulo convivial entre pares, que permita a cada uno intercambiar, mantener una dinamica, promover un desarollo calitativo para mantener un alto nivel profesional.'
 service.index.p.1: 'Conócete mejor y mejora tu estilo para reflejar quién eres.<br><br>Las sesiones de coaching duran unos 60 minutos.<br><br>Un servicio de coaching de imagen sea cual sea, es siempre un enfoque profundamente humanizador que no consiste en un programa lineal. Depende de tu objetivo, de tus expectativas y de tus necesidades del momento. Por eso el número de sesiones puede variar ligeramente en función de tu evolución.<br><br>Los paquetes incluyen un primer contacto gratuito de 30 minutos en el que podrás obtener las aclaraciones que necesites y plantear todas las preguntas que tengas, y tras el cual podrás confirmar tu decisión de continuar por el camino que hayas elegido.'
 service.index.p.2: 'Todos los paquetes de coaching están disponibles tanto por videoconferencia como en persona*, ¡y también puedes combinar ambos!'
 service.show.appointment: 'Pedir hora'
@@ -61,8 +61,8 @@ contact.workshop.form.AssociationSchool: 'Asociación, colegio'
 home.video.link: 'https://www.youtube.com/embed/wlj7LmCt-w8'
 navbar.deconnect: Desconectarse
 Fabienne.title: 'Minust | Fabienne, Fabimage Eesti'
-contact.workshop.form.agreements.info: 'Me kogume neid andmeid selleks, et saata teile e-posti teel teie poolt soovitud teavet/ pakkumist. Kasutame teie e-posti aadressi ka selleks, et saata teile teavet meie teenuste kohta.<br><br>Kui te ei soovi selliseid kirju saada, märgistage palun allpool olev kast:'
-contact.workshop.form.agreements: 'Olen vastu sellele, et minu e-posti aadressi kasutatakse Fabimage OÜ uudiste ja/või pakkumiste saamiseks.'
+contact.workshop.form.agreements.info: 'Recogemos estos datos para enviarle la información/presupuesto que ha solicitado por correo electrónico. También utilizamos su dirección de correo electrónico para enviarle información sobre nuestros servicios.<br><br>Si no desea recibir este tipo de correos, marque la casilla siguiente:'
+contact.workshop.form.agreements: 'Me opongo a que mi dirección de correo electrónico sea utilizada para recibir noticias y/u ofertas de Fabimage OÜ.'
 company.content.title: 'Empresas, asociaciones, centros de enseñanza'
 company.top-section.title: 'Centros de enseñanza'
 company.top-section.text: 'Fabimage ofrece sus servicios a escuelas, centros culturales y otras organizaciones juveniles en forma de talleres y seminarios.<br>Ofrezco talleres de <strong>desarrollo individual</strong> a través del <strong>trabajo sobre la imagen personal,</strong> utilizando una metodología que estimula los jóvenes a reflexionar sobre sus puntos fuertes y sus valores.<br><br>Con mis colegas del AFIPP, hemos desarrollado un programa basado en <strong>cinco temas,</strong> cada uno de los cuales puede dividirse en varios módulos de 90-120 minutos. Cada módulo se centra en competencias diferentes.'
@@ -85,7 +85,7 @@ company.bottom-section.list.image: 'cómo utilizar los accesorios'
 company.bottom-section.list.sevenStyle: 'el papel de la imagen en la comunicación'
 company.bottom-section.list.treeOfLife: 'el árbol de vida de la imagen (trabajo sobre la formación de la imagen personal)'
 company.bottom-section.endText: 'Consulte las tarifas sin compromiso.<br><br>*Los participantes en estos talleres reciben un 10% de descuento en el resto de los servicios de Fabimage.'
-navbar.company: Compañía
+navbar.company: "Empresas"
 home.quote: '<< En mi concepción del coaching de imagen no existe un estándar de belleza, la verdadera y única belleza es la tuya. ¡Hay una luz dentro de ti, esperando brillar! >>'
 service.index.body.title: '¿Qué significa para ti ser auténtico?'
 service.index.myOffer: 'Mis ofertas'
@@ -94,12 +94,12 @@ workshop.index.body.title: Talleres
 workshop.index.admin.newWorkshop: 'crear un nuevo taller'
 navbar.fabienne: 'Sobre mi'
 navbar.services: Servicios
-navbar.book: 'Guia digital'
+navbar.book: 'Ebooks'
 book.buy: Compro
 book.update: 'Poner al día'
 book.createNewBook: 'Crear un nuevo libro'
-contact.send: 'enviar a'
-Service.readMore: 'Leer más'
+contact.send: 'enviar'
+Service.readMore: 'Saber más'
 workshop.update: Actualizar
 workshop.createCommentary: 'Crear comentario'
 workshop.updateCommentary: 'Actualizar comentario'
@@ -124,7 +124,7 @@ book.buyed.email.p: 'Mul on hea meel kinnitada Sinu tellimus.<br><br>Ma olen rõ
 book.index.buyedBook: 'Sulle saadetakse e-kiri, mis kinnitab sinu ostu ja sisaldab linki e-raamatu allalaadimiseks. Kui sa kirja ei saa, kontrolli oma rämpsposti kausta.<br><br>Küsimuste korral palun kirjuta: fabimage.coach@gmail.com'
 downloadBook: '[Lae oma juhend nüüd alla].'
 book.buyed.email.p.end: 'Fabienne Chmara, Coach, Heaolu looja läbi imago Fabimage.coach@gmail.com'
-coachingImage.iframe.p: '¿<strong>Imagen y estilo</strong> son lo mismo? ¿Qué nos impide ser nosotros mismos y de dónde sacamos la inspiración para seguir siendo auténticos? ¿Por qué hablo tanto de <strong>autoconocimiento</strong> y qué es exactamente? ¿Cómo se puede trabajar la imagen?<br><br>Respondo a las preguntas de Risto sobre imagen y estilo en el siguiente <strong>podcast de Õpetajate Maja</strong> (La Casa del Profesor).'
+coachingImage.iframe.p: '¿<strong>Imagen y estilo</strong> son lo mismo? ¿Qué nos impide ser nosotros mismos y de dónde sacamos la inspiración para seguir siendo auténticos? ¿Por qué hablo tanto de <strong>autoconocimiento</strong> y qué es exactamente? ¿Cómo se puede trabajar la imagen?<br><br>Respondo a esas preguntas de Risto sobre imagen y estilo en el siguiente <strong>podcast de Õpetajate Maja</strong> (La Casa del Profesor).'
 book.head.title: 'Guías de coaching de imagen'
 book.head.metaDescription: 'Guías para inspirarte y ayudarte a desarrollar un estilo más auténtico'
 contact.head.title: 'Póngase en contacto con Fabienne Chmara - Coach de imagen'
@@ -148,7 +148,7 @@ home.textVideo: '«En mi concepción del coaching de imagen no existe un estánd
 home.CommmentaryIntroduction: 'Lo que dicen mis clientes'
 coachingImage.rightColumn.img.alt: __coachingImage.rightColumn.img.alt
 coachingImage.button.services: Servicios
-company.button.quote: estimar
+company.button.quote: "Contactar"
 workshop.index.body.title.masterClass: 'Masterclass en línea'
 workshop.index.p.2: 'Las clases magistrales online se desarrollan en el entorno Zoom y tienen una duración de 60 minutos (45 min + 15 min para preguntas).<br><br><strong>Las clases magistrales son prácticas..</strong> ¡Te presento el mundo de los colores, comparto consejos de estilo y ayudo a crear el guardarropa de tus sueños! Hablo con más detalle sobre los diferentes estilos, la elegancia, la importancia de la apariencia en la creación de una imagen y el uso responsable de la moda.<br><br>Cada mujer es hermosa y única, ¡es importante aceptarnos tal como somos!<br><br>Las clases magistrales se llevan a cabo con al menos 5 participantes:<br>¿Tienes 4 amigas? <strong>¡Organizo una clase para vosotras!</strong> ¡Escribeme para concertar la fecha!'
 workshop.interested: 'Esto me interesa'
