--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -116,13 +116,13 @@ giftCard.index.form.commentary: 'Comentarios (ej. código promocional...)'
 giftCard.button: 'Encargar una tarjeta'
 giftCard.index.sent: 'Tu pedido ha sido enviado'
 home.giftCard.title: 'Tarjeta de regalo Fabimage'
-book.download: "Descargo mi ebook"
+book.download: 'Descargo mi ebook'
 book.index.promotionalCode: 'Codigo promocional'
 book.index.wrongCode: 'Este código promocional no es válido.'
 book.buyed.hello: Tere
 book.buyed.email.p: 'Mul on hea meel kinnitada Sinu tellimus.<br><br>Ma olen rõõmus, et oled huvitatud minu seitsme universaalse stiili juhendist. Sain selleks inspiratsiooni omaenda teekonnast, mil katsetasin neid ükshaaval enda peal mitme kuu jooksul!<br><br>Minu tõeline lootus seda Sinuga jagades on, et Sa valid kõige efektiivsema, kiirema ja säästlikuma tee, et saada endale garderoob, mis peegeldab Sind, millega oled 100% rahul ja milles Sa tunned end imeliselt ja enesekindlalt.<br><br>See on minu esimene e-raamat ja see on Sulle mõeldud! Loodan, et loed seda hoolikalt ja hakkad oma ideaalset garderoobi ehitama sisemistest tugevustest lähtuvalt, jättes kõrvale kõik, mis piirab sinu sisemist heaolu.<br><br>Kui Sul on selle sisu kohta kommentaare, siis palun jaga neid minuga julgelt!<br><br>Tänan Sind usalduse eest ja kohtumiseni peagi www.fabimage.coach !'
-book.index.buyedBook: 'Sulle saadetakse e-kiri, mis kinnitab sinu ostu ja sisaldab linki e-raamatu allalaadimiseks. Kui sa kirja ei saa, kontrolli oma rämpsposti kausta.<br><br>Küsimuste korral palun kirjuta: fabimage.coach@gmail.com'
-downloadBook: '[Lae oma juhend nüüd alla].'
+book.index.buyedBook: 'Recibirás un correo electrónico con la confirmación de tu compra y el enlace para descargar la guía. Si no lo recibes por favor revisa tu bandeja de spam.<br><br>Si tienes cualquier duda puedes escribirme a : fabimage.coach@gmail.com'
+downloadBook: '[Descarga ahora tu guía].'
 book.buyed.email.p.end: 'Fabienne Chmara,<br> Coach, Creadora de bienestar a través de la imagen Fabimage.coach@gmail.com'
 coachingImage.iframe.p: '¿<strong>Imagen y estilo</strong> son lo mismo? ¿Qué nos impide ser nosotros mismos y de dónde sacamos la inspiración para seguir siendo auténticos? ¿Por qué hablo tanto de <strong>autoconocimiento</strong> y qué es exactamente? ¿Cómo se puede trabajar la imagen?<br><br>Respondo a esas preguntas de Risto sobre imagen y estilo en el siguiente <strong>podcast de Õpetajate Maja</strong> (La Casa del Profesor).'
 book.head.title: 'Guías de coaching de imagen'
@@ -164,5 +164,9 @@ giftCard.index.form.type: '¿Qué servicio quieres ofrecer?'
 contact.form.ComingWithFriend: 'Vengo con una amiga'
 contact.workshop.form.send: Enviar
 contact.form.phoneNumber.afterComingWithFriend: '(Indica el nombre completo de tu amiga)'
-book.index.emailError: "Este email es invalido"
-Tariff.index.h1: "Precio de los servicios"
+book.index.emailError: 'Este email es invalido'
+Tariff.index.h1: 'Precio de los servicios'
+book.email.password: 'La contraseña del vídeo es:'
+contact.form.email: 'Correo electrónico'
+book.card.price: GRATIS
+login.title: 'Conectarse'
